Modify send of forms

--- a/html/sugerencias.html
+++ b/html/sugerencias.html
@@ -39,7 +39,7 @@
     <div id="Form_sugerencias" class="formulario">
         <h1 align="center">Sugerencias</h1>
         <p>Desea enviar una recomendacion o sugerencia llene los datos y la recibiremos con mucho gusto</p>
-        <form id="sugerencias" method="post" action="https://formspree.io/19051123@saltilo.tecnm.mx">
+        <form id="sugerencias" method="POST" action="https://formspree.io/f/mpzkjwqk">
             <p>Nombres: <input class="text" type="text" name="Nombre"> &nbsp; Apellidos: <input class="text" type="text" name="Apellidos"> </p>
             <p>Correo electronico &nbsp; <input class="text" type="email" name="email" placeholder="Email" required name="email"></p>
             <!--El siguiente atributo esta oculto y es para definir el
